CSS fix not showing map on mobile

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -96,13 +96,12 @@ main {
 html {
     height: 100%;
 }
-@media (min-width: map-get($grid-breakpoints, md)) {
-    body {
-        &.app {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-        }
+
+body {
+    &.app {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
     }
 }
 
