--- a/app/frontend/assets/styles/components/_list-incidents.scss
+++ b/app/frontend/assets/styles/components/_list-incidents.scss
@@ -47,8 +47,12 @@
                     }
                 }
             }
+        }
+    }
 
-            .showMap & {
+    &.showMap {
+        .container__header {
+            .container__controls {
                 .btn-sort--small {
                     display: none;
                 }
