--- a/app/frontend/assets/styles/components/_map.scss
+++ b/app/frontend/assets/styles/components/_map.scss
@@ -175,7 +175,6 @@
         visibility: hidden;
         pointer-events: none;
         width: 0;
-        height: 0;
     }
 }
 
@@ -186,7 +185,6 @@
         visibility: visible;
         pointer-events: all;
         width: 100%;
-        height: auto;
     }
 }
 
